--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>reinamento para eu me tornar o melhor programador do mundo</h1>
+    <p>Eu vou estudar bastante e me tornar um ótimo programador e ficar milíonario com outros lins tambem</p>
+    <img src="fota do teste de programação.png">
+    <footer>
+        <img src="" alt="">
+
+    </footer>
 
 </body>
 
