--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
-<html lang="pt.br">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>treinamento de programacao</title>
+    <title>Distribuidora e conveniência Neves</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>reinamento para eu me tornar o melhor programador do mundo</h1>
-    <p>Eu vou estudar bastante e me tornar um ótimo programador e ficar milíonario com outros lins tambem</p>
-    <img src="fota do teste de programação.png">
-    <footer>
-        <img src="" alt="">
+    <h1>Distribuidora e conveniência Neves</h1>
+    <p><em>Seja bem-vindo à distribuidora e conveniência Neves, a sua nova distribuidora e loja de conveniência no coração da cidade! Com um conceito moderno e focado na praticidade, nossa missão é oferecer produtos de qualidade, rapidez no atendimento e conveniência para o seu dia a dia.<br>
+Nossa loja foi pensada para atender às suas necessidades, seja para uma compra rápida ou para encontrar itens essenciais com aquele toque especial que você merece. Aqui, você encontra uma ampla variedade de produtos: alimentos, bebidas, produtos de higiene, limpeza, e muito mais — tudo em um só lugar e com preços acessíveis.<br>
+Além disso, nossa equipe está sempre disposta a oferecer o melhor atendimento, tornando a sua experiência de compra ainda mais agradável. Estamos prontos para servir você, seja nas compras para o lar, como também nas necessidades do seu comércio ou evento.</em></p>
 
+<img src="WhatsApp Image/WhatsApp Image 2025-05-21 at 22.07.44.jpeg">
+<div>  
+<strong>    divisao</strong>
+</div>
+    <footer>
+        <img src="WhatsApp Image/WhatsApp Image 2025-05-21 at 22.07.44.jpeg" alt="">
+        <p><strong>©Copyright<br>Gabriel Gusso</strong></p>
     </footer>
+    
 
 </body>
 
